Move common methods to new util classes. Add comments and adjust thresholds