@@ -1,23 +1,40 @@
 package edu.northeastern.smells;
 
-import spoon.Launcher;
 import spoon.reflect.code.*;
 import spoon.reflect.declaration.CtField;
 import spoon.reflect.declaration.CtMethod;
 import spoon.reflect.declaration.CtType;
-import spoon.reflect.visitor.filter.TypeFilter;
-import spoon.reflect.declaration.CtElement;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static edu.northeastern.utils.Metrics.calculateWMC;
+import static edu.northeastern.utils.Metrics.isAccessor;
+
+/**
+ * Data Class code smell detector.
+ * A Data Class is a class that only acts as a store for fields.
+ * It primarily sets field values and then makes them accessible through
+ * getters to other classes and has no other real value besides that.
+ * The metrics used to detect a Data Class are
+ * 1. WOC: Weight of Class (number of functional public methods/total number of public methods)
+ * 2. WMC: Weighted Methods per Class (sum of CC of all methods in class)
+ * 3. NOPA: Number Of Public Attributes (non-constant public fields)
+ * 4. NOAM: Number of Accessor Methods (total number of getters and setters)
+ */
 public class DataClassDetector extends AbstractDetector {
 
+    // few fields threshold
     private static final int ACCESSOR_OR_FIELD_FEW_LEVEL = 3;
+    // many fields threshold
     private static final int ACCESSOR_OR_FIELD_MANY_LEVEL = 5;
-    private static final double WOC_LEVEL = 1.0 / 3.0; // 33.3%
+    // percentage of weight of class (functional/total methods)
+    // should be less than 33%
+    private static final double WOC_LEVEL = 1.0 / 3.0;
+    // weight of methods threshold.
+    // if few fields then use this threshold
     private static final int WMC_HIGH_LEVEL = 31;
+    // if many fields then use this threshold
     private static final int WMC_VERY_HIGH_LEVEL = 47;
 
     public DataClassDetector(List<String> javaFilePaths, String inputDirPath) {
@@ -42,12 +59,17 @@ public class DataClassDetector extends AbstractDetector {
         int noam = calculateNOAM(type);
         double woc = calculateWOC(type);
 
+        // sum of CC of all methods should meet WOC_LEVEL
         boolean interfaceRevealsData = woc < WOC_LEVEL;
 
+        // nopa + noam tells us how much data the class reveals about itself
+        // if a class reveals too much data about itself and lacks complexity then
+        // we can conclude that it is a data class
         boolean revealsDataAndLacksComplexity =
                 (nopa + noam > ACCESSOR_OR_FIELD_FEW_LEVEL && wmc < WMC_HIGH_LEVEL) ||
                         (nopa + noam > ACCESSOR_OR_FIELD_MANY_LEVEL && wmc < WMC_VERY_HIGH_LEVEL);
 
+        // Only if both combined metrics pass (IRD and RDLC)
         if (interfaceRevealsData && revealsDataAndLacksComplexity) {
             if (type.getPosition().isValidPosition()) {
                 detectedLines.add(type.getPosition().getLine());
@@ -57,6 +79,14 @@ public class DataClassDetector extends AbstractDetector {
         return detectedLines;
     }
 
+    /**
+     * Number of Public Attributes (Fields)
+     * This calculated the true number of public fields a class
+     * makes available to other classes. It ignores constants
+     * which are static and final.
+     * @param type The class whose NOPA needs to be calculated
+     * @return The NOPA metric value
+     */
     private int calculateNOPA(CtType<?> type) {
         int count = 0;
         for (CtField<?> field : type.getFields()) {
@@ -67,78 +97,45 @@ public class DataClassDetector extends AbstractDetector {
         return count;
     }
 
+    /**
+     * Number Of Accessor Methods
+     * The total number of getter and setter methods in a class
+     * @param type the class whose NOAM needs to be calculated
+     * @return the NOAM metric value
+     */
     private int calculateNOAM(CtType<?> type) {
         int count = 0;
         for (CtMethod<?> method : type.getMethods()) {
-            if (isAccessor(method)) {
+            if (isAccessor(method, true)) {
                 count++;
             }
         }
         return count;
     }
 
-    private int calculateWMC(CtType<?> type) {
-        int totalComplexity = 0;
-        for (CtMethod<?> method : type.getMethods()) {
-            totalComplexity += calculateCyclomaticComplexity(method);
-        }
-        return totalComplexity;
-    }
-
+    /**
+     * Calculate the Weight of Class metric.
+     * WOC is the ratio of functional public methods to total number of public methods
+     * in a class.
+     * Data Classes have a low WOC score since they do not contain
+     * many functional methods
+     * @param type The class whose WOC metric needs to be calculated
+     * @return the WOC metric
+     */
     private double calculateWOC(CtType<?> type) {
         List<CtMethod<?>> publicMethods = type.getMethods().stream()
                 .filter(CtMethod::isPublic)
                 .filter(m -> !m.isAbstract()) // interfaces/abstract classes check
-                .collect(Collectors.toList());
+                .toList();
 
         long totalPublicMethods = publicMethods.size();
         if (totalPublicMethods == 0) return 0.0;
 
         long functionalMethods = publicMethods.stream()
-                .filter(m -> !isAccessor(m))
+                .filter(m -> !isAccessor(m, true))
                 .count();
 
         return (double) functionalMethods / totalPublicMethods;
     }
 
-    private boolean isAccessor(CtMethod<?> method) {
-        if (!method.isPublic() || method.isStatic()) return false;
-
-        String name = method.getSimpleName();
-        int paramCount = method.getParameters().size();
-        String returnType = method.getType().getSimpleName();
-
-        if ((name.startsWith("get") || name.startsWith("is")) && paramCount == 0 && !returnType.equals("void")) {
-            return true;
-        }
-
-        if (name.startsWith("set") && paramCount == 1 && returnType.equals("void")) {
-            return true;
-        }
-
-        return false;
-    }
-
-    private int calculateCyclomaticComplexity(CtMethod<?> method) {
-        if (method.getBody() == null) return 1;
-
-        int complexity = 1;
-
-        List<Class<? extends CtElement>> decisionNodes = List.of(
-                CtIf.class, CtFor.class, CtForEach.class, CtWhile.class,
-                CtDo.class, CtCase.class, CtConditional.class
-        );
-
-        for (Class<?> node : decisionNodes) {
-            complexity += method.getElements(new TypeFilter(node)).size();
-        }
-
-        for (CtBinaryOperator<?> op : method.getElements(new TypeFilter<>(CtBinaryOperator.class))) {
-            if (op.getKind() == BinaryOperatorKind.AND || op.getKind() == BinaryOperatorKind.OR) {
-                complexity++;
-            }
-        }
-
-        return complexity;
-    }
 }
